taskにvalidationを追加した

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,6 +10,9 @@ ja:
       board:
         title: 'Name'
         description: 'Description'
+      task:
+        title: 'Title'
+        description: 'Description'
   date:
     abbr_day_names:
     - 日
